--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@ async function loadClasses() {
     showLoading("Carregando turmas...");
 
     try {
-        const res = await fetch(`${"https://script.google.com/macros/s/AKfycbyHozvX6WTZFdCRm02Fc4Vi8jT7XZvKALEdjE0btRFHaZ3CMa4idigmMQH-x23x2h4t/exe"}?action=getTurmas`);
+        // CORREÇÃO: Usando a constante WEB_APP_URL
+        const res = await fetch(`${WEB_APP_URL}?action=getTurmas`);
         const data = await res.json(); // Espera um objeto { turmas: [...] }
 
         // 1. Verifica se houve erro retornado pelo Apps Script
@@ -327,7 +328,8 @@ async function loadStudents() {
     showLoading("Carregando alunos...");
 
     try {
-        const res = await fetch(`${"https://script.google.com/macros/s/AKfycbyHozvX6WTZFdCRm02Fc4Vi8jT7XZvKALEdjE0btRFHaZ3CMa4idigmMQH-x23x2h4t/exe"}?action=getAlunos&turma=${encodeURIComponent(turma)}`);
+        // CORREÇÃO: Usando a constante WEB_APP_URL
+        const res = await fetch(`${WEB_APP_URL}?action=getAlunos&turma=${encodeURIComponent(turma)}`);
         const data = await res.json(); // Espera um objeto { alunos: [...] } ou { error: "..." }
 
         // 1. Verifica se houve erro retornado pelo Apps Script
@@ -365,8 +367,9 @@ async function loadStudentData() {
     showLoading("Carregando dados...");
 
     try {
+        // CORREÇÃO: Usando a constante WEB_APP_URL
         const res =
-            await fetch(`${"https://script.google.com/macros/s/AKfycbyHozvX6WTZFdCRm02Fc4Vi8jT7XZvKALEdjE0btRFHaZ3CMa4idigmMQH-x23x2h4t/exe"}?action=getDadosAluno&turma=${encodeURIComponent(turma)}&aluno=${encodeURIComponent(aluno)}`);
+            await fetch(`${WEB_APP_URL}?action=getDadosAluno&turma=${encodeURIComponent(turma)}&aluno=${encodeURIComponent(aluno)}`);
 
         const data = await res.json();
 
@@ -395,5 +398,3 @@ studentSelect.addEventListener("change", loadStudentData);
 
 </body>
 </html>
-
-
