--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     --secondary-color: #2c5282;
     --accent-color: #e74c3c;
     --light-color: #ecf0f1;
-    --dark-color: #0f1a26;
+    --dark-color: #2c3e50;
     --success-color: #2ecc71;
     --warning-color: #f39c12;
     --gradient-start: #1a2b3c;
@@ -30,7 +30,7 @@
 }
 
 body {
-    background: linear-gradient(135deg, #1a2b3c, #0f1a26);
+    background: #34495e;
     color: #fff;
     line-height: 1.6;
     min-height: 100vh;
@@ -43,10 +43,10 @@ body {
 }
 
 /* ==============================
-   HEADER COM EFEITO DE RELEVO
+   HEADER COM DEGRADÊ AZUL E PRETO
 ================================= */
 header {
-    background: linear-gradient(145deg, var(--gradient-start), var(--gradient-end));
+    background: linear-gradient(145deg, #1a2b3c, #000000);
     color: white;
     padding: 30px 0;
     text-align: center;
@@ -106,29 +106,10 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: transparent;
-    background: white;
-    -webkit-background-clip: text;
-    background-clip: text;
+    color: white;
     text-shadow: 
         0 -1px 0 rgba(0,0,0,0.7),
         0 1px 0 rgba(255,255,255,0.3);
-    letter-spacing: 1px;
-    font-weight: 600;
-}
-
-.subtitle::after {
-    content: "DESEMPENHO ESCOLAR";
-    position: absolute;
-    top: 2px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: rgba(255,255,255,0.1);
-    text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     letter-spacing: 1px;
     font-weight: 600;
 }
@@ -137,7 +118,7 @@ h1 {
    CONTROLES COM EFEITO DE RELEVO
 ================================= */
 .controls {
-    background: linear-gradient(145deg, #2c3e50, #1a2530);
+    background: #2c3e50;
     padding: 25px;
     border-radius: 12px;
     box-shadow: 
@@ -190,7 +171,7 @@ select:focus {
    CARDS DE INFORMAÇÕES
 ================================= */
 .student-info {
-    background: linear-gradient(145deg, #2c3e50, #1a2530);
+    background: #2c3e50;
     padding: 25px;
     border-radius: 12px;
     display: none;
@@ -219,7 +200,7 @@ select:focus {
 }
 
 .bimester-card {
-    background: linear-gradient(145deg, #2c3e50, #1a2530);
+    background: #2c3e50;
     border-radius: 12px;
     overflow: hidden;
     box-shadow: 
@@ -250,7 +231,7 @@ select:focus {
 }
 
 /* ==============================
-   TABELA DE DISCIPLINAS COM CÉLULAS
+   TABELA DE DISCIPLINAS COM CÉLULAS E BORDAS BRANCAS
 ================================= */
 .bimester-content {
     flex: 1;
@@ -261,31 +242,27 @@ select:focus {
 .subject-table {
     width: 100%;
     border-collapse: collapse;
+    border: 1px solid white;
 }
 
 .subject-table th {
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.3);
     padding: 12px 8px;
     text-align: left;
     font-size: 0.9rem;
-    border-bottom: 1px solid rgba(255,255,255,0.1);
+    border: 1px solid white;
+    color: white;
 }
 
 .subject-table td {
     padding: 10px 8px;
-    border-bottom: 1px solid rgba(255,255,255,0.05);
-    background: rgba(255,255,255,0.03);
-    box-shadow: 
-        inset 0 1px 0 rgba(255,255,255,0.05),
-        0 1px 2px rgba(0,0,0,0.1);
-}
-
-.subject-table tr:last-child td {
-    border-bottom: none;
+    border: 1px solid white;
+    background: rgba(255,255,255,0.05);
+    color: white;
 }
 
 .subject-table tr:hover td {
-    background: rgba(255,255,255,0.06);
+    background: rgba(255,255,255,0.1);
 }
 
 /* ==============================
@@ -410,7 +387,7 @@ select:focus {
 
     <header>
         <h1>CONSELHO DE CLASSE</h1>
-       
+        <p class="subtitle">Desempenho Escolar</p>
     </header>
 
     <div class="controls">
@@ -654,4 +631,3 @@ studentSelect.addEventListener("change", loadStudentData);
 
 </body>
 </html>
-
