--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
     <script>
         // URL do Web App do Google Apps Script - SUBSTITUA PELA SUA URL
-        const WEB_APP_URL = 'SUA_URL_DO_WEB_APP_AQUI';
+        const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzdOZYybAXFVz8OllFMWF-VYOJgG0Ls29YXpprkzscxSn_xfQpPKpYDy6ug9EImsXM/exec';
         
         // Elementos DOM
         const classSelect = document.getElementById('class-select');
@@ -519,3 +519,4 @@
     </script>
 </body>
 </html>
+
