--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Painel CONSELHO DE CLASSE?SÉRIE</h1>
+            <h1>CONSELHO DE CLASSE E SÉRIE</h1>
             <p class="subtitle">Acompanhamento de Desempenho Escolar</p>
         </header>
         
@@ -452,6 +452,7 @@
     </script>
 </body>
 </html>
+
 
 
 
