--- a/index.html
+++ b/index.html
@@ -568,8 +568,7 @@
  </div>
  <script>
  // WEB APP (backend) URL - substitua pela sua URL real
- const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbxuVX-hhzJjWXaukPliMRpqQ_Qv3gSGG7ToZq
-Ulu_ms_2oJi2eSibvbXt577J17ESL1/exec';
+ const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbz1XWsur_70KoDfyHiS_95aG4cUijBd3fA7QCba5JKDhUwNPRNg90fztWrD4667T_D3/exec';
  // DOM elements
  const classSelect = document.getElementById('class-select');
  const studentSelect = document.getElementById('student-select');
@@ -986,3 +985,4 @@ visualizar os dados</div>';
  </script>
 </body>
 </html>
+
