--- a/index.html
+++ b/index.html
@@ -582,9 +582,10 @@
                 margin-bottom: 15px;
             }
             
+            /* Garante que o 5º card tenha a mesma largura dos outros em telas médias */
             .bimester-card:nth-child(5) {
-                min-width: 100%;
-                max-width: 100%;
+                min-width: 48%;
+                max-width: 48%;
             }
         }
         
