--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>CONSELHO DE CLASSE E SÉRIE</h1>
+            <h1>SISTEMA INTEGRADO CONSELHO</h1>
         </header>
         
         <div class="controls-panel">
@@ -1140,3 +1140,4 @@
     </script>
 </body>
 </html>
+
