Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>SISTEMA INTEGRADO CONSELHO</h1>
+            <h1>SISTEMA INTEGRADO CONSELHO DE CLASSE</h1>
         </header>
         
         <div class="controls-panel">
