--- a/index.html
+++ b/index.html
@@ -966,14 +966,14 @@
                 
                 <div class="controls-center">
                     <div class="form-group turma">
-                        <label for="class-select">Selecione a Turma:</label>
+                        <label for="class-select">SELECIONE A TURMA:</label>
                         <select id="class-select">
-                            <option value="">-- Selecione uma turma --</option>
+                            <option value="">-- SELECIONE UMA TURMA --</option>
                         </select>
                     </div>
                     
                     <div class="form-group aluno">
-                        <label for="student-select">Selecione o Aluno:</label>
+                        <label for="student-select">SELECIONE O ALUNO:</label>
                         <select id="student-select" disabled>
                             <option value="">-- Primeiro selecione uma turma --</option>
                         </select>
